# WebhookFeeds

./: .gitignore  404.html  Dockerfile  LICENSE.md  README.md  config.json  docker_compose.dev.yml  fastapi.Dockerfile  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml  unit.Dockerfile
.github/workflows/: create-docker-image.yml  docs.yml  test.yml  update-docker-baseimage.yml
add_feed/: index.html
add_feeditems/: index.html
app/: config.py  database.py  dependencies.py  main.py  models.py  util.py
app/models/: diun.py  feed.py  feeditem.py
app/routers/: feed_renderes.py  feeditems.py  feeds.py  other.py  proxies.py
app/templates/: diun.description.jinja2  diun.title.jinja2
deploy/: index.html
diun/: index.html
docs/: add_feed.md  add_feeditems.md  deploy.md  diun.md  feed_renderer.md  index.md  license.md  templates.md  what_is_proxy.md
feed_renderer/: index.html
license/: index.html
search/: search_index.json
templates/: index.html
tests/: conftest.py  pytest.ini  test_main.py  test_routers_feed_renderes.py  test_routers_feeditems.py  test_routers_feeds.py  test_routers_other.py  test_routers_proxies.py
what_is_proxy/: index.html
