[project]
name = "webhookfeeds"
description = "A simple RESTful API to create and get feeds"
authors = [
    {name = "MarcLandis"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[all] (>=0.115.8,<0.116.0)",
    "feedendum (>=0.4.0,<0.5.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "cmarkgfm (>=2024.11.20,<2025.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[project.urls]
homepage = "https://marclandis.github.io/webhookfeeds"
documentation = "https://marclandis.github.io/webhookfeeds"
repository = "https://github.com/marclandis/webhookfeeds"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^25.1.0"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
flake8 = "^7.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.3"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
